<resources>
    <string name="app_name">Prueba</string>

    <string name="product_id_label">Id</string>
    <string name="product_name_label">Name</string>
    <string name="product_price_label">Price</string>
    <string name="product_category_label">Category</string>
    <string name="product_description_label">Description</string>

    <string name="product_id_hint">Ex: 1</string>
    <string name="product_name_hint">Ex: Laptop</string>
    <string name="product_price_hint">0.00</string>
    <string name="product_category_hint">Ex: Technology</string>
    <string name="product_description_hint">Ex: Lorem Ipsum Dolor</string>

    <string name="money_symbol">$</string>

    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
