<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/products_fragment"
        android:background="@color/background"
        android:paddingEnd="@dimen/form_padding_end"
        android:paddingStart="@dimen/form_padding_start"
        android:paddingTop="@dimen/form_padding_top"
        tools:context=".NewProductFragment">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_id_label"
                        style="@style/FormControlLabelStyle"/>

                <EditText
                        android:layout_width="match_parent"
                        style="@style/FormControlStyle"
                        android:hint="@string/product_id_hint"
                        android:inputType="number"
                        android:id="@+id/product_id"/>

                <View android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:background="@color/separator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name_label"
                        style="@style/FormControlLabelStyle"/>

                <EditText
                        android:layout_width="match_parent"
                        style="@style/FormControlStyle"
                        android:hint="@string/product_name_hint"
                        android:id="@+id/product_name"/>

                <View android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:background="@color/separator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price_label"
                        style="@style/FormControlLabelStyle"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/form_control_padding_start"
                        android:layout_marginBottom="@dimen/form_control_margin_bottom"
                        android:orientation="horizontal">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textSize="@dimen/money_text_size"
                              android:text="@string/money_symbol"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:hint="@string/product_price_hint"
                            style="@style/FormControlStyle"
                            android:inputType="numberDecimal"
                            android:id="@+id/product_price"/>
                </LinearLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:background="@color/separator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_category_label"
                        style="@style/FormControlLabelStyle"/>

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/form_control_height"
                        android:layout_marginStart="@dimen/form_control_margin_start"
                        android:layout_marginEnd="@dimen/form_control_margin_end"
                        android:layout_marginBottom="@dimen/form_control_margin_bottom"
                        android:id="@+id/product_category"/>

                <View android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:background="@color/separator"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_description_label"
                        style="@style/FormControlLabelStyle"/>

                <EditText
                        android:layout_width="match_parent"
                        style="@style/LargeFormControlStyle"
                        android:hint="@string/product_description_hint"
                        android:id="@+id/product_description"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

</LinearLayout>